@@ -1,6 +1,8 @@
 Release Notes
 
 * current
+  * changed TA to work with mcshare(TW)=0
+  * added a protection to EP for missing replica metadata
   * changed timeout for staring to 48h
   * changed getOriginPandaIDs to return only one origin
   * changed timeout for starting jobs to 12h
